--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="purple_200">#FF2E31C2</color>
+    <color name="purple_500">#FF062991</color>
+    <color name="purple_700">#FF117A7E</color>
+    <color name="teal_200">#FF3F715A</color>
+    <color name="teal_700">#FF053A3A</color>
     <color name="black">#FF000000</color>
+    <color name="black_70">#B3000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
