--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
+    <color name="purple_200">#FFCEA5FF</color>
+    <color name="purple_500">#FF20073E</color>
+    <color name="purple_700">#FF113C5C</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorWrong">#FFFF1E1B</color>
+    <color name="colorCorrect">#FF1D610D</color>
+    <color name="colorBackground">#FFFFFF</color>
 </resources>
